# oxidian

./: .dockerignore  .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  Dockerfile  PLAN.md  README.md  bacon.toml  deploy-mobile.sh  deploy.sh  hybrid-render.md  really-deploy.sh
.cargo/: config.toml
docs/: git-integration.md  kanban-design.md  mobile-support.md  plugin-architecture.md  roadmap.md  ui-exploration.md  user-stories.md
docs/templates/: daily-note.md  test-template.md
memory/: MEMORY.md  project_vision.md
scripts/: android-icons.sh
