[workspace]
resolver = "2"
members = [
    "packages/ui",
    "packages/vault",
    "packages/app",
    "packages/web",
    "packages/desktop",
    "packages/mobile",
]

[workspace.dependencies]
dioxus = { version = "0.8.0-alpha.0" }
lucide-dioxus = { version="3.11.0", features=["all-icons"] }
dioxus-use-js = { git ="https://github.com/lavaeater/dioxus-use-js.git", branch="dioxus-v0.8.0" }
log = "0.4"
# workspace
ui = { path = "packages/ui" }
vault = { path = "packages/vault" }
app = { path = "packages/app" }
