[workspace]
resolver = "2"
members = [
    "packages/ui",
    "packages/vault",
    "packages/app",
    "packages/web",
    "packages/desktop",
    "packages/mobile",
]
exclude = ["vendor"]

[workspace.dependencies]
dioxus = { version = "0.8.0-alpha.0" }
lucide-dioxus = { version="3.11.0", features=["all-icons"] }
dioxus-use-js = { git ="https://github.com/lavaeater/dioxus-use-js.git", branch="dioxus-v0.8.0" }
log = "0.4"
# workspace
ui = { path = "packages/ui" }
vault = { path = "packages/vault" }
app = { path = "packages/app" }

# Local patch of the dioxus-use-js fork: the macro generated `await import("/assets/…")`,
# which fails in the Android System WebView (Chromium) because Dioxus runs eval inside a
# `new AsyncFunction(...)` whose base URL is `about:blank`, so a root-relative module
# specifier can't resolve ("Failed to resolve module specifier … base URL is about:blank").
# The patched macro resolves the specifier against `document.baseURI` first. Upstream the
# one-line fix to lavaeater/dioxus-use-js, then this patch + vendor/ can be removed.
[patch."https://github.com/lavaeater/dioxus-use-js.git"]
dioxus-use-js = { path = "vendor/dioxus-use-js/dioxus-use-js" }
dioxus-use-js-macro = { path = "vendor/dioxus-use-js/dioxus-use-js-macro" }
